<resources>
    <string name="app_name">SiamUni</string>
    <string name="producer_name">Swufe</string>
    <string name="version_num">v1.0</string>
    <string name="wanna_say">Welcome to Siam University</string>
    <string name="head_1">Siam University</string>
    <string name="head_2">Nearby</string>
    <string name="head_3">Information</string>
    <string name="app_language">this is english version</string>
    <string name="main_aboutUs">About us</string>
    <string name="main_academics">Academics</string>
    <string name="main_admission">Admission</string>
    <string name="main_studentVoice">Student Voice</string>
    <string name="main_news">News</string>
    <string name="main_sports">Sports</string>
    <string name="main_gallery">Gallery</string>
    <string name="main_socialMedia">Social Media</string>
    <string name="main_library">Library</string>
    <string name="main_studentLogin">Student Login</string>
    <string name="main_calendar">Calendar</string>
    <string name="main_video">Video</string>
    <string name="main_suStaffs">SU Staffs</string>
    <string name="main_award">Awards</string>
    <string name="main_map">Map</string>
    <string name="main_contactUs">Contact us</string>
    <string name="main_school" translatable="false">School</string>
    <string name="title_activity_welcome" translatable="false">WelcomeActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="aboutus_history_string">\b \b \b \b Siam University was founded in 1965 by the late Dr. Narong Mongkhonvanit as the first 3-year private engineering school in Thailand. It began by educating a student body of only two hundred, offering only one program, Mechanical Technical Power, which led to the equivalent of an associate’s degree (two-year) in the United States by virtue of the Thai Private School Act. In 1973 the Siam Technical College, was formally established as a private, higher education institution with the authorization to grant degrees. Soon after, in 1975, the university launched programs leading to a bachelors’ degree in Accounting, Marketing or Secretarial Science. Within those programs, students majored in banking, finance, personnel management or marketing. Later, in 1986, Siam Technical College became Siam Technical University, and three years later became ‘Siam University’ to show diversity in fields of study. Over nearly five decades of steady growth and development, driven by a devotion to academic excellence, Siam University has contributed more than 60,000 graduates in various fields to Thailand’s national work force as well as other countries around the world. In fact, it has become the fifth largest private university with a student body containing over 16,000 students across eight schools, including an International and Graduate Program.</string>
    <string name="aboutus_message_from_the_president_string">\b \b \b \b The world is getting advanced everyday through sustainable development, and as long as change is pervasive, transformation remains constant. There are three ways of attaining a sustainable development which can be economy, environment, and society. By the means of globalization; internationalization and modernization can be obtained which a society prospers. This is what we are striving for is a society to be a good figure of sustainable development for the rest of the world. \n\b \b \b \b Our mission is to give our students the best and assist them to attain an education at its peak. We are also on a mission of creating an environment of practical education with burden of different kind of modern technologies, where our students will know the differences in key concepts and theoretical meanings taught in their various lectures and establish a link between them. \n\b \b \b \b In our university, we have a good number of resources under our possession that can enable a student to attain any form of life he/she seeks for; including sports house, recreation centers, computer rooms and centers, music and dancing rooms, meeting points and study rooms, high standard and well-decorated libraries and even laboratory rooms, computer centers, and other facilities a highly respected institution can offer. We also have adequate facilities and amenities in every faculty of studies, and we possess a wide range of modern technologies in each and every department. In contrast, our university is at the same educational standard, including qualified staffs and professional lecturers with vast academic excellence, compared with other accredited universities abroad. We are strongly recognized by the affiliations of the IAU, ARTDO, AUAP, EUHOFA, GUNI, IAUP and ASAIHL.\n \b \b \b \b Due to these massive developments, we ensured that the necessary equipment and facilities are provided and maintained to help students in their respective future careers. It’s also the responsibility of the university to make sure that the academic needs are fully met and well attended for the betterment of the students.\n As the president of this institution, it will always be a great honor for me to welcome you into our university. It will also be a privilege for me to be part of your academic life at Siam University. And, I will be solely delighted to have you in our midst.\n\n Dr.Pornchai Mongkhonvanit\n\n President</string>
    <string name="aboutus_missionandvison_string">\b \b \b \b Siam University has used educational innovation and state-of-the-art technology to supply its students with the knowledge and skills they will need to succeed at the dawn of this new century. Siam’s mission is to produce students who are competent, efficient and confident in their fields of study and ultimately in their chosen fields of work. These traits along with a sound ethical and moral grounding, and an understanding of diversified cultures, will provide them with the insight and abilities needed for continuing development after their school years have concluded. To help achieve these objectives, Siam University has promoted research, extended educational services, and concentrated on national cultural preservation through close cooperation with local communities and industries.</string>
    <string name="sports_string31">Siam \b University \b Basket \b Ball \b Club \n 12th \b Building, Register \b Office \n Siam \b University \b Main \b Campus </string>
    <string name="sports_string2"> Siam \b University \b Thai \b Boxing \b Club \n 9th \b Floor, 11th \b Building </string>
    <string name="sports_string3">Siam \b University \b Cricket \b Club \b Actively \b participated \b in “Inter \b University \b Cricket \b Tournament \b Thailand \b 2011” and “Inter \b University \b Cricket \b Tournaments \b Malaysia \b 2012” \n Currently \b we \b are \b looking \b for \b players \b to \b set \b up \b a \b new \b cricket \b team \n Please \b contact \b us \n E-mail: \b yhing@siam.edu </string>
</resources>