<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout
        android:background="#ffffff"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="11sp"
        android:text="@string/producer_name"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="12dip"
        android:id="@+id/copy_right"/>


    <RelativeLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal">

    <ImageView
        android:layout_height="130dip"
        android:layout_width="110dip"
        android:id="@+id/jay_studio_icon"
        android:src="@drawable/app"/>

</RelativeLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:text="@string/app_name"
        android:padding="6dip"
        android:id="@+id/app_name"/>

    <TextView
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:text="@string/version_num"
        android:id="@+id/version_name"
        android:paddingBottom="6dip"
        android:gravity="bottom"/>

</LinearLayout>

    <View
        android:background="#dddddd"
        android:layout_height="1px"
        android:layout_width="fill_parent"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:text="@string/wanna_say"
        android:padding="6dip"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>

</RelativeLayout>

</RelativeLayout>