<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignTop="@+id/textView1" >

    <LinearLayout
        android:id="@+id/LinearLayoutStudents"
        android:layout_width="323dp"
        android:layout_height="457dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".StaffActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewSports1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.51"
            android:gravity="center"
            android:src="@drawable/sports_1" />

        <TextView
            android:id="@+id/textViewSports1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sports_string31" />

        <ImageView
            android:id="@+id/imageViewSports2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sports_2" />

        <TextView
            android:id="@+id/textViewSports2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sports_string2" />

        <ImageView
            android:id="@+id/imageViewSports3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sports_3" />

        <TextView
            android:id="@+id/textViewSports3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sports_string3" />

    </LinearLayout>
</ScrollView>
